<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup_window_kline"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/one_minute"
        style="@style/PopupItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_minute" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray_light" />

    <TextView
        android:id="@+id/three_minutes"
        style="@style/PopupItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_minutes" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray_light" />

    <TextView
        android:id="@+id/five_minutes"
        style="@style/PopupItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five_minutes" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray_light" />

    <TextView
        android:id="@+id/fifteen_minutes"
        style="@style/PopupItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifteen_minutes" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray_light" />

    <TextView
        android:id="@+id/day_k"
        style="@style/PopupItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_k" />
</LinearLayout>