<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.aaron.myviews.view.AdsBanner
        android:id="@+id/ads_banner"
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:id="@+id/simulated_practice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simulated_practice" />

            <TextView
                style="@style/HeaderTitle.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/be_master_by_practice" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_simulated_practice" />
        </LinearLayout>

        <View
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:background="#EDEDED"/>

        <LinearLayout
            android:id="@+id/get_cash_free"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/get_cash_free" />

            <TextView
                style="@style/HeaderTitle.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/get_cash_easy" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_get_cash_free" />
        </LinearLayout>

        <View
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:background="#EDEDED"/>

        <LinearLayout
            android:id="@+id/holiday_game"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holiday_game" />

            <TextView
                style="@style/HeaderTitle.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_award_on_list" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_holiday_game" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#EDEDED"/>
</LinearLayout>